@@ -1,6 +1,7 @@
 ggplot2 0.7.1  (2008-XX)
 ----------------------------------------
 
+* scale_gradient*: axes are correctly labelled when a transformation is used
 * scale_discrete_position: more aesthetically pleasing expansion for a wider ranges of plots (picks expansion based on whether or not geom with width used, e.g. bars)
 * scale_position: both discrete and continuous gain a new formatter argument to control the default formatting of the axis labels, see also handy numeric formatters: dollar, comma and percent
 * facet_wrap: new facetter which wraps a 1d ribbon of panels into 2d
